src/tests/snapshots/cargo_vet__tests__unpublished__audit_as_crates_io_unpublished_full_prune.snap
---
source: src/tests/unpublished.rs
expression: output
---
audits.toml: (unchanged)
config.toml: (unchanged)
imports.lock: (unchanged)

