src/tests/snapshots/cargo_vet__tests__unpublished__audit_as_crates_io_unpublished_wildcard_prefer_fresh.snap
---
source: src/tests/unpublished.rs
expression: output
---
audits.toml: (unchanged)
config.toml: (unchanged)
imports.lock:
 
 # cargo-vet imports lock
 
 [[unpublished.descriptive]]
 version = "10.0.0"
-audited_as = "8.0.0"
+audited_as = "9.0.0"
 
 [[publisher.descriptive]]
-version = "8.0.0"
+version = "9.0.0"
 when = "2022-12-15"
 user-id = 1
 user-login = "user1"
 user-name = "User One"


